@@ -1,5 +1,17 @@
 2004-11-04  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* flumotion/component/consumers/httpstreamer/resources.py:
+	  fix a STUPID bug where the requester was stored as a tuple because
+	  of a trailing comma and of course %s alone doesn't show this as
+	  a tuple.  sigh.
+	* flumotion/common/errors.py:
+	* flumotion/component/bouncers/bouncer.py:
+	* flumotion/component/consumers/httpstreamer/http.py:
+	* flumotion/manager/component.py:
+	  add some more functions so keycards can be expired by the bouncer
+
+2004-11-04  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* Makefile.am:
 	* flumotion/component/bouncers/bouncer.py:
 	* flumotion/component/bouncers/htpasswdcrypt.py:
